[^]项目调整采用springboot-javafx-support